Fullstack_CRUD/extra_yml_file/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/employees
spec:
  ingressClassName: nginx  # Add this line to specify the Ingress Class
  rules:
  - host: backend.local
    http:
      paths:
      - path: /api/v1/employees
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 7001
